should document API changes and deprecations, and other "large"
changes that have an effect on users.  Bug fixes and minor changes
aren't documented here, unless the bug-fix has a major observable
effect.  If you change something in VXL, please document it here.

---------------------------------------------------------------------------
      - Add VXL_IMPORT_BUILD_SETTINGS option (default to YES) to allow
        private libraries to have different compiler settings. (Setting
        to NO will permit differences.)
        
      - vsl can now read/write very large matrices and images in low-memory
        situations.

      - PNG reader now supports sBIT for recovering the original bitdepth.

****************************
VXL 1.5.0	- April 2006
****************************

      - Add support for ICC 8.1

      - VC6 compilers are no longer supported

      - VC7.0 compiler support is deprecated.  VC7.0 will not be
        supported in vxl 1.6.

      - New (somewhat experimental) support for reading video files
        and receiving input from usb/1394 cameras through DirectShow in
        Windows systems has been included in contrib/brl/bbas/vidl2.  vidl2
        also includes support for video-for-linux cameras and 1394 cameras
        under linux.

      - A new runtime logging facility with almost no overhead has
        been introduced in contrib/mul/mbl/mbl_log.  It is patterned after
        Apache's log4j library.

      - vil now optionally supports reading JPEG 2000 compressed
        image files (.jpc and .j2k) as well as JPEG 2000 compressed NITF 2.1
        images.

      - vil now supports pyramid images in two forms - 1)
        multiple pyramid levels in a single directory and 2) the levels are
        stored in a single tiff file.  This capability is useful for displaying
        large files.

      - vil now supports blocked images for large satellite images.

      - Clean up some of the compiler definitions (VCL_GCC_34, etc).